// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getPrettierEslintOptions returns all prettier-eslint options 1`] = `
Object {
  "prettierLast": true,
}
`;

exports[`getPrettierOptions editorconfig integration uses editorconfig options when enabled in config 1`] = `
Object {
  "bracketSpacing": true,
  "jsxBracketSameLine": true,
  "parser": "flow",
  "printWidth": 100,
  "semi": true,
  "singleQuote": true,
  "tabWidth": 4,
  "trailingComma": true,
  "useTabs": false,
}
`;

exports[`getPrettierOptions returns all prettier options 1`] = `
Object {
  "bracketSpacing": true,
  "jsxBracketSameLine": true,
  "parser": "flow",
  "printWidth": 80,
  "semi": true,
  "singleQuote": true,
  "tabWidth": 2,
  "trailingComma": true,
  "useTabs": true,
}
`;
